--- a/src/App.css
+++ b/src/App.css
@@ -83,8 +83,43 @@ a.active {
 
 /* MAIN GRID */
 
-.main-grid {
+.main-wrapper {
   grid-row: 2;
   grid-column: 2;
+  height: fit-content;
+}
+
+.main-wrapper h1 {
+  margin-left: 20px;
+}
+
+.main-grid {
   display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-rows: min-content 1fr;
+  gap: 20px;
+  margin: 20px;
+  height: fit-content;
+}
+
+.grid-item {
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.item-a {
+  grid-row-start: 1;
+  grid-row-end: span 2;
+  grid-column: 1;
+}
+
+.item-b {
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.item-c {
+  grid-row: 2;
+  grid-column: 2;
 }
