--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@ body {
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-template-rows: 100px 1fr;
-  background-color: antiquewhite;
   height: 100vh;
   width: 100vw;
 }
@@ -91,6 +90,7 @@ a.active {
 
 .main-wrapper h1 {
   margin-left: 20px;
+  margin-bottom: 0;
 }
 
 .main-grid {
@@ -99,6 +99,7 @@ a.active {
   grid-template-rows: min-content 1fr;
   gap: 20px;
   margin: 20px;
+  margin-top: 10px;
   height: fit-content;
 }
 
@@ -106,6 +107,12 @@ a.active {
   background-color: white;
   border-radius: 20px;
   padding: 20px;
+}
+
+.grid-item h2 {
+  margin-top: 0;
+  font-size: larger;
+  font-weight: bold;
 }
 
 .item-a {
@@ -122,4 +129,40 @@ a.active {
 .item-c {
   grid-row: 2;
   grid-column: 2;
+}
+
+.orange {
+  background-color: navajowhite;
+}
+
+/* SQUARE CARDS */
+.squares-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  overflow: hidden;
+  margin: 10px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 3px 3px 5px 7px rgba(0, 0, 0, 0.05);
+}
+
+.square-number {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.square-caption {
+  font-size: medium;
+  text-align: center;
 }
