--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ header {
 }
 
 header .time {
-  font-size: larger;
+  font-size: x-large;
   font-weight: bold;
   margin-right: 30px;
 }
@@ -85,32 +85,47 @@ a.active {
 .main-wrapper {
   grid-row: 2;
   grid-column: 2;
-  height: fit-content;
+  height: calc(100vh - 100px);
+  max-height: calc(100vh - 100px);
+  overflow: auto;
 }
 
 .main-wrapper h1 {
   margin-left: 20px;
   margin-bottom: 0;
+  margin-top: 20px;
+  height: 2rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-grid {
+  flex-grow: 1;
   display: grid;
+  min-width: 0;
+  min-height: 0;
   grid-auto-columns: 1fr;
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: 1fr 2fr;
+
   gap: 20px;
   margin: 20px;
   margin-top: 10px;
-  height: fit-content;
 }
 
 .grid-item {
+  min-height: 0;
+  max-height: 100%;
   background-color: white;
   border-radius: 20px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .grid-item h2 {
   margin-top: 0;
+  margin-bottom: 15px;
+  height: 1.5rem;
   font-size: larger;
   font-weight: bold;
 }
@@ -165,4 +180,17 @@ a.active {
 .square-caption {
   font-size: medium;
   text-align: center;
+}
+
+/*SCROLLABLE LISTS*/
+.list-block {
+  max-height: auto;
+}
+
+.list-wrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
