--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,8 @@ a.active {
 /* MAIN GRID */
 
 .main-wrapper {
+  display: flex;
+  flex-direction: column;
   grid-row: 2;
   grid-column: 2;
   height: calc(100vh - 100px);
@@ -105,7 +107,7 @@ a.active {
   min-width: 0;
   min-height: 0;
   grid-auto-columns: 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 3fr 4fr;
 
   gap: 20px;
   margin: 20px;
@@ -124,7 +126,7 @@ a.active {
 
 .grid-item h2 {
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   height: 1.5rem;
   font-size: larger;
   font-weight: bold;
@@ -193,4 +195,96 @@ a.active {
   flex-direction: column;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+/* POPUP WINDOW */
+
+.popup-window {
+  position: fixed;
+  left: 50vw;
+  top: 50vh;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  box-shadow: 0px 0px 0px max(50vw, 50vh) rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  padding: 30px;
+}
+.popup-window h2 {
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
+
+/*POPUP FORMS*/
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-grid {
+  display: grid;
+  grid-auto-columns: 300px;
+  grid-auto-rows: 1fr;
+  gap: 10px;
+}
+
+.red {
+  color: red;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field label {
+  position: absolute;
+  font-size: small;
+  margin-left: 10px;
+  color: gray;
+}
+
+.form-field input,
+.form-field select {
+  padding: 10px;
+  padding-top: 15px;
+  background-color: rgb(235, 235, 235);
+  border: none;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.task-name {
+  grid-row: 1;
+  grid-column-start: 1;
+  grid-column-end: span 2;
+}
+
+.task-category {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.task-deadline-date {
+  grid-row: 3;
+  grid-column: 1;
+}
+
+.task-deadline-time {
+  grid-row: 3;
+  grid-column: 2;
+}
+
+.submit-button {
+  background-image: url("./img/background.jpg");
+  background-size: cover;
+  background-position: center;
+  border: none;
+  padding: 10px;
+  border-radius: 20px;
+  color: white;
+  align-self: flex-end;
+}
+form p {
+  font-size: small;
+  margin: 0;
 }
