--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,7 @@ a.active {
   width: 100px;
   height: 100px;
   background-color: white;
+  border: none;
   overflow: hidden;
   margin: 10px;
   border-radius: 20px;
@@ -182,6 +183,12 @@ a.active {
 .square-caption {
   font-size: medium;
   text-align: center;
+}
+
+.square-icon {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
 }
 
 /*SCROLLABLE LISTS*/
