--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -1,12 +1,20 @@
-.task-item {
-  border: 1px solid black;
-  border-radius: 10px;
+.list-item {
   display: grid;
   grid-template-columns: 1fr max-content;
   grid-template-rows: min-content 1fr;
-  padding: 5px;
-  margin-bottom: 10px;
   position: relative;
+  padding: 5px;
+}
+
+.site-item {
+  border: 1px solid black;
+}
+
+.task-item {
+  border: 1px solid black;
+  border-radius: 10px;
+
+  margin-bottom: 10px;
 }
 
 .overdue {
@@ -243,4 +251,16 @@
 .deadline {
   font-size: smaller;
   margin-right: 5px;
+}
+
+.site-box {
+  grid-row: 1;
+  grid-column: 1;
+  width: fit-content;
+}
+.site-description {
+  grid-row: 2;
+  grid-column-start: 1;
+  grid-column-end: span 2;
+  max-width: 100%;
 }
