--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,11 @@ header .time {
   padding: 20px;
 }
 
+.sidebar-header {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar ul {
   list-style-type: none;
   margin: 0;
@@ -106,8 +111,9 @@ a.active {
   display: grid;
   min-width: 0;
   min-height: 0;
+  max-width: 100%;
   grid-auto-columns: 1fr;
-  grid-template-rows: 3fr 4fr;
+  grid-template-rows: min-content 1fr min-content;
 
   gap: 20px;
   margin: 20px;
@@ -116,7 +122,9 @@ a.active {
 
 .grid-item {
   min-height: 0;
+  height: min-content;
   max-height: 100%;
+  max-width: calc(100vw - 40px);
   background-color: white;
   border-radius: 20px;
   padding: 20px;
@@ -152,12 +160,82 @@ a.active {
   background-color: navajowhite;
 }
 
+@media screen and (max-width: 480px) {
+  .main-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(fit-content, 3);
+  }
+  .item-a {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .item-b {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .item-c {
+    grid-row: 3;
+    grid-column: 1;
+  }
+
+  .app-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 50px 1fr min-content;
+    height: unset;
+    width: 100vw;
+  }
+
+  header {
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    grid-column: 1;
+
+    width: 100%;
+    height: 100px;
+
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header .date {
+    margin-left: 30px;
+  }
+
+  .sidebar {
+    grid-column: 1;
+    grid-row-start: 2;
+    grid-row-end: span 2;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .sidebar-header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .main-wrapper {
+    grid-row: 4;
+    grid-column: 1;
+    height: auto;
+    max-height: unset;
+    max-width: 100%;
+  }
+}
+
 /* SQUARE CARDS */
 .squares-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  max-width: 100%;
+  overflow: auto;
+  flex-shrink: 1;
 }
 
 .square {
@@ -166,6 +244,7 @@ a.active {
   background-color: white;
   border: none;
   overflow: hidden;
+  flex-shrink: 0;
   margin: 10px;
   border-radius: 20px;
   display: flex;
