--- a/src/components/Avatar.css
+++ b/src/components/Avatar.css
@@ -10,3 +10,14 @@
   object-fit: cover;
   border-radius: 50%;
 }
+@media screen and (max-width: 480px) {
+  .avatar-wrapper {
+    flex-direction: row;
+  }
+
+  .avatar-img {
+    width: 50px;
+    height: 50px;
+    margin: 0 10px;
+  }
+}
