--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: antiquewhite;
 }
@@ -122,7 +126,6 @@ a.active {
 
 .grid-item {
   min-height: 0;
-  height: min-content;
   max-height: 100%;
   max-width: calc(100vw - 40px);
   background-color: white;
@@ -135,7 +138,7 @@ a.active {
 .grid-item h2 {
   margin-top: 0;
   margin-bottom: 10px;
-  height: 1.5rem;
+  /* height: 1.5rem; */
   font-size: larger;
   font-weight: bold;
 }
@@ -205,6 +208,7 @@ a.active {
     grid-column: 1;
     grid-row-start: 2;
     grid-row-end: span 2;
+    max-width: calc(100vw - 40px);
 
     display: flex;
     flex-direction: column;
@@ -224,6 +228,17 @@ a.active {
     height: auto;
     max-height: unset;
     max-width: 100%;
+  }
+
+  nav ul {
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: row;
+    max-width: calc(100vw - 80px);
+    overflow: auto;
+  }
+  nav ul li {
+    margin: 0 10px;
   }
 }
 
@@ -416,5 +431,4 @@ form p {
 .dash-header-box {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
 }
